# river-journal

./: .gitignore  .gitmodules  .worktreeinclude  BASELINE_TRIAGE.md  README.md  biome.json  codex-diff.txt  package.json  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.mts  vitest.setup.ts
.github/workflows/: test.yml
.yarn/patches/: @tamagui-static-npm-2.0.0-rc.16-d1b3e50d71.patch  @tamagui-web-npm-2.0.0-rc.16-752fb636c3.patch  solito-npm-4.4.1-976dc5859c.patch
apps/desktop/: .gitignore  next.config.js  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/expo/: app.json  package.json
apps/mobile/: .gitignore  app.json  babel.config.js  crypto-polyfill.js  eas.json  index.js  metro.config.js  package.json
apps/next/: next.config.base.js  next.config.js  package.json
apps/tauri/: package.json
apps/web/: .gitignore  next.config.js  package.json
supabase/: config.toml  seed.sql
supabase/migrations/: 20260221000000_create_users.sql  20260221000001_create_daily_entries.sql  20260221000002_create_flows.sql  20260221000003_add_auth_rpc.sql  20260301000000_add_updated_at_triggers.sql  20260302000000_add_user_creation_trigger.sql  20260308000000_make_encryption_mode_nullable_until_choice.sql  20260308010000_convert_encryption_mode_to_enum.sql  20260310000000_add_managed_encryption_key.sql  20260311000000_add_managed_key_check_constraint.sql  20260312000000_switch_managed_key_to_base64.sql  20260313000000_create_trusted_browsers.sql  20260504000000_create_user_grace_days.sql  (+20 more)
(+87 files in other folders)
