[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
keyring = { version = "3.6", features = ["apple-native"] }
scrypt = "0.11"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
zeroize = { version = "1.8.2", features = ["serde"] }

# Compile crypto crates with full optimizations even in dev/debug builds.
# Without this, scrypt in unoptimized Rust is actually slower than V8's
# JIT-compiled JavaScript — the opposite of what we want.
[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.salsa20]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.pbkdf2]
opt-level = 3
